[gd_scene load_steps=7 format=3 uid="uid://tf4pu5s5nf14"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_qqev1"]
[ext_resource type="Texture2D" uid="uid://bnqcsngqk16ud" path="res://assets/Backround/forest_backround.png" id="2_dnh3b"]
[ext_resource type="FontFile" uid="uid://d07ikgxccnwhy" path="res://assets/Font/karma/Karma Future.otf" id="3_3dw60"]
[ext_resource type="FontFile" uid="uid://lydmiks4du7k" path="res://assets/Font/karma/Karma Suture.otf" id="4_51xea"]
[ext_resource type="AudioStream" uid="uid://cebqf1ccjq381" path="res://assets/audio/music/AustÄ—jukas.mp3" id="6_pnqp2"]
[ext_resource type="PackedScene" uid="uid://er3g8on5o3r7" path="res://scenes/settings_menu/settings_menu.tscn" id="12_lajkb"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqev1")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dnh3b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 124

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Game_Name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.735907, 0.539036, 1, 1)
theme_override_colors/font_shadow_color = Color(0.788075, 0.715376, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 16
theme_override_constants/shadow_offset_y = 16
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_3dw60")
theme_override_font_sizes/font_size = 80
text = "Friend from another planet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 176)
layout_mode = 2

[node name="Play_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(224, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("4_51xea")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Settings_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(224, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("4_51xea")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(224, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("4_51xea")
theme_override_font_sizes/font_size = 32
text = "Exit
"

[node name="Settings_Menu" parent="." instance=ExtResource("12_lajkb")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pnqp2")
volume_db = -30.0
autoplay = true
bus = &"Music"
